add support page

--- a/pages/landingPage.html
+++ b/pages/landingPage.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MolaiBOT</title>
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
     <style>
         body{
           height: 100%;
@@ -29,6 +29,7 @@
             <br>
             <a href="https://dsc.gg/molaibot" class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mtg-a">Invite</a>
             <a href="/commands" class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mtg-a">Commands</a>
+            <a href="/support" class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mtg-a">Support</a>
           </div>
           <div class="flex flex-col text-center w-full mb-12">
           <h3 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Wanna Become A Beta Tester? Fill This In!</h3>
