--- a/pages/support.html
+++ b/pages/support.html
@@ -1,21 +1,39 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MolaiBOT</title>
-    <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
-    <style>
-        body,html{
-          height: 100%;
-          width: 100%;
-          background: #8A2387;  /* fallback for old browsers */
-          background: -webkit-linear-gradient(to right, #F27121, #E94057, #8A2387);  /* Chrome 10-25, Safari 5.1-6 */
-          background: linear-gradient(to right, #F27121, #E94057, #8A2387); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        }
-    </style>
-</head>
-<body>
-  <iframe src="https://e.widgetbot.io/channels/811123491130310686/844496042899537960" height="100%" width="100%"></iframe>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>MolaiBOT</title>
+		<link
+			href="https://unpkg.com/tailwindcss/dist/tailwind.min.css"
+			rel="stylesheet"
+		/>
+		<style>
+			body,
+			html {
+				height: 100%;
+				width: 100%;
+				background: #8a2387; /* fallback for old browsers */
+				background: -webkit-linear-gradient(
+					to right,
+					#f27121,
+					#e94057,
+					#8a2387
+				); /* Chrome 10-25, Safari 5.1-6 */
+				background: linear-gradient(
+					to right,
+					#f27121,
+					#e94057,
+					#8a2387
+				); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+			}
+		</style>
+	</head>
+	<body>
+		<iframe
+			src="https://e.widgetbot.io/channels/811123491130310686/844496042899537960"
+			height="100%"
+			width="100%"
+		></iframe>
+	</body>
 </html>
